[gd_scene load_steps=14 format=2]

[ext_resource path="res://res/exported/sprites/poisonplant.png" type="Texture" id=1]
[ext_resource path="res://scripts/HurtBox.gd" type="Script" id=2]
[ext_resource path="res://scripts/PoisonPlant.gd" type="Script" id=3]
[ext_resource path="res://res/exported/fonts/GajrajOne.tres" type="DynamicFont" id=4]
[ext_resource path="res://PoisonBlower.tscn" type="PackedScene" id=5]
[ext_resource path="res://res/exported/sprites/alert.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 11.0454

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="CircleShape2D" id=2]
radius = 100.0

[sub_resource type="CircleShape2D" id=4]
radius = 11.0454

[sub_resource type="Animation" id=5]
resource_name = "damageFlash"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "damageFlash"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 0.054902, 0.992157, 0.968627, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="OccluderPolygon2D" id=6]
polygon = PoolVector2Array( -6.00007, -20, 3.99993, -20, 11.9999, -26, 17.9999, -28.0001, 21.9999, -16.0001, 28, -10.0001, 28, -2.0001, 24.0001, 17.9999, 20.0001, 21.9999, 15, 26, 6.00009, 24, 4.00007, 18, -11.9999, 18, -21.9999, 16.0001, -28, 8.0001, -28, -5.9999, -24.0001, -13.9999, -10.0001, -14 )

[node name="PoisonPlant" type="KinematicBody2D"]
script = ExtResource( 3 )
angleOfVisionDegrees = 360
maxViewDistance = 150.0

[node name="PoisonBlower" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -18 )

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Body"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="HurtBox" type="Area2D" parent="."]
visible = false
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
visible = false
shape = SubResource( 3 )

[node name="FOV" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.129412 )
show_behind_parent = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="FOV"]
visible = false
shape = SubResource( 2 )
disabled = true

[node name="RayCast2D" type="RayCast2D" parent="FOV"]
cast_to = Vector2( 0, 0 )

[node name="Range" type="Area2D" parent="."]
position = Vector2( -33, -24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
modulate = Color( 1, 1, 1, 0.145098 )
position = Vector2( 33, 24 )
shape = SubResource( 4 )

[node name="damageFlash" type="AnimationPlayer" parent="."]
anims/damageFlash = SubResource( 5 )

[node name="freeze" type="AnimationPlayer" parent="."]
anims/damageFlash = SubResource( 7 )

[node name="Label" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
occluder = SubResource( 6 )

[node name="alert" type="Sprite" parent="."]
visible = false
position = Vector2( -5, -49 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 7 )

[node name="alertTimer" type="Timer" parent="."]

[connection signal="body_entered" from="FOV" to="." method="_on_FOV_body_entered"]
[connection signal="body_exited" from="FOV" to="." method="_on_FOV_body_exited"]
[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
[connection signal="timeout" from="alertTimer" to="." method="_on_alertTimer_timeout"]
